# voterroll-geocode

./: .gitignore  Pipfile  README.md  load_layermapping.py  manage.py  pyproject.toml  testVRdata.csv  voter_roll_bulk.py
ansible/: vrgc.yml
ansible/inventory/: hosts
ansible/inventory/host_vars/: vrgc.yml
voterroll/: admin.py  models.py  views.py
voterroll/management/commands/: census_geocode.py  export_csv.py  load_voterroll.py  migrate_data.py
voterroll/migrations/: 0001_initial.py  0002_geocoderesult.py  0003_geocoderesult_failed.py  0004_auto_20190408_1915.py  0005_auto_20190409_1441.py  0006_auto_20190409_1532.py  0007_auto_20190410_0057.py  0008_auto_20190410_1555.py  0009_county.py  0010_auto_20190423_1917.py
vrgc/: settings.py  urls.py  wsgi.py
